# mq_client_demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fuxi_setup.cmake  mq_config_demo.h.in  mtk_setup.cmake
include/rabbitmq-c/: amqp.h
src/cjson/: cJSON.c  cJSON.h
src/common/: fileCtr.c  fileCtr.h  mq_client.c  mq_client.h  unit.c  unit.h
src/log/: log_manage.c  log_manage.h
src/main/: cs_getopt.c  cs_getopt.h  device_init.c  device_init.h  main.c  main.h  mq_config.c  mq_config.h
